--- a/IRF_beadando/IRF_beadando/IRF_beadando.csproj
+++ b/IRF_beadando/IRF_beadando/IRF_beadando.csproj
@@ -46,6 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdatokExportalasa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdatokExportalasa.Designer.cs">
+      <DependentUpon>AdatokExportalasa.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AdatokImportalasa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdatokImportalasa.Designer.cs">
+      <DependentUpon>AdatokImportalasa.cs</DependentUpon>
+    </Compile>
     <Compile Include="Buszjarat.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -54,11 +66,26 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Jarat.cs" />
+    <Compile Include="JaratLetrehozas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="JaratLetrehozas.Designer.cs">
+      <DependentUpon>JaratLetrehozas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repulojarat.cs" />
+    <Compile Include="UtvonalLetrehozasa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UtvonalLetrehozasa.Designer.cs">
+      <DependentUpon>UtvonalLetrehozasa.cs</DependentUpon>
+    </Compile>
     <Compile Include="Varos.cs" />
     <Compile Include="Vonatjarat.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
