--- a/IRF_beadando/IRF_beadando/IRF_beadando.csproj
+++ b/IRF_beadando/IRF_beadando/IRF_beadando.csproj
@@ -75,16 +75,19 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repulojarat.cs" />
-    <Compile Include="UtvonalLetrehozasa.cs">
+    <Compile Include="Utvonaltervezes.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UtvonalLetrehozasa.Designer.cs">
-      <DependentUpon>UtvonalLetrehozasa.cs</DependentUpon>
+    <Compile Include="Utvonaltervezes.Designer.cs">
+      <DependentUpon>Utvonaltervezes.cs</DependentUpon>
     </Compile>
     <Compile Include="Varos.cs" />
     <Compile Include="Vonatjarat.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="JaratLetrehozas.resx">
+      <DependentUpon>JaratLetrehozas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
